[package]
name = "dwebble"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cbindgen = { version = "*", features = ["default"] }
cxx-build = "*"

[dependencies]
cxx = { version = "*", features = ["std", "c++20"] }
#tokio = { version = "*" }
#tonic = { version = "*" }

uuid = { version = "*", features = ["v7"] }
#cxx-async = {version = "*"}

[lib]
crate-type = ["staticlib"]
path = "ffi/index.rs"

[lints.clippy]
#implicit_return = "deny"
#needless_return = "allow"

[profile.dev.build-override]
debug = true
