[package]
name = "dwebble"
version = "0.1.0"
edition = "2024"

[build-dependencies]
#cbindgen = { version = "*", features = ["default"] }
cxx-build = "*"
#glob = { version = "*" }


[dependencies]
cxx = { version = "*", features = ["std", "c++20"] }
tokio = { version = "*", features = ["rt-multi-thread"] }
#tonic = { version = "*" }

uuid = { version = "*", features = ["v7"] }
#cxx-async = {version = "*"}

anyhow = { version = "*" }

port_check = { version = "*" }

pkce-std = { version = "*" }
glob = "*"

[lib]
crate-type = ["staticlib"]
path = "ffi/index.rs"

[lints.clippy]
#implicit_return = "deny"
#needless_return = "allow"

[profile.dev]
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
codegen-units = 8
opt-level = 0

[profile.release]
panic = "unwind"

[target.x86_64-pc-windows-msvc]
# rustflags = ["-C", "debuginfo=2"]
